config/trivy-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trivy
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  sessionAffinity: ClientIP
